--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Lean Junio",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "multer": "^1.4.0",
     "nodemon": "^1.18.4"
