--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Lean Junio",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "mongoose": "^5.3.13",
     "multer": "^1.4.0",
     "nodemon": "^1.18.4",
     "pg": "^7.6.1",
