--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "client-sessions": "^0.8.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
